--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,7 +2,7 @@ project(tests)
 add_subdirectory(lib)
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
-add_executable(tests_run GeneratorTest.cpp)
+add_executable(tests_run ProjectTests.cpp)
 
 target_link_libraries(tests_run lib)
 target_link_libraries(tests_run gtest gtest_main)
